--- a/courses.html
+++ b/courses.html
@@ -74,10 +74,10 @@
             <div class="col-3">
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                        <img class="card-img-top" src="assets/img/dsa1.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">CS 3304: Data and Information Structures</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Development of methods for organizing and processing data sets. Types of data structures analyzed include linear lists, stacks, queues, trees, and graphs. Algorithm analysis methods are used throughout to analyze the various data structures and algorithm design alternatives.</p>
                         </div>
                         <div class="card-footer">
                             <small class="text-muted">Last updated 3 mins ago</small>
@@ -87,10 +87,10 @@
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <img class="card-img-top" src="assets/img/comporganization.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CS 2401: Computer Organization</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">Organization of general-purpose computers; data representation and arithmetic; instruction sets architectures and addressing modes; memory hierarchies, input/output and storage, and alternative architecture.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
@@ -99,10 +99,10 @@
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
+                    <img class="card-img-top" src="assets/img/cs2.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">CS 2410: Introduction to Data Structures and Algorithms</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text">Arrays, records (C++ structs), classes and data abstraction, object-oriented software development, pointers, dynamic data structures, linked structures, elementary and searching and sorting algorithms, recursion, an introduction to algorithm complexity analysis.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
@@ -110,48 +110,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-3">
-                <div class="card-deck">
-                    <div class="card">
-                        <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="card">
-                    <img class="card-img-top" src="https://loremflickr.com/320/240" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
